# golf-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RESULTS.md  pyproject.toml
experiments/001-weight-decay/: README.md  train.yaml
experiments/002-longer-warmdown/: README.md  train.yaml
experiments/003-grad-clip/: README.md  train.yaml
experiments/004-momentum-warmup/: README.md  model.yaml  train.yaml
experiments/005-mlp-3x/: README.md  model.yaml  train.yaml
experiments/006-ortho-init/: README.md  train.yaml
experiments/007-seq-2048/: README.md  model.yaml  train.yaml
experiments/008-lower-lr/: README.md  train.yaml
experiments/009-bigram-hash/: README.md  model.yaml
experiments/010-qat-int6/: README.md  train.yaml
experiments/011-layers-11/: README.md  model.yaml
experiments/012-swa/: README.md  train.yaml
experiments/013-overtone-init/: README.md  model.yaml
experiments/014-phase-transition-resid/: README.md  model.yaml
experiments/015-embed-lr-doubled/: README.md  train.yaml
experiments/016-smeargate/: README.md  model.yaml
experiments/017-xsa/: README.md  model.yaml
experiments/018-flash-attn-3/: README.md  train.yaml
experiments/019-ema/: README.md  train.yaml
experiments/020-partial-rope/: README.md  model.yaml
papers/: TurboQuIP.md
runpod/: experiment-ephemeral.yaml  experiment.yaml  launch.sh  volume.yaml
scripts/: README.md  eval.py  gen_artifact_readme.py  quant.py  refresh_skypilot_runpod_catalog.py  run_eval.sh  run_experiment.sh  run_local_experiment.sh  run_quant.sh  squash.sh  update_results.py
(+305 files in other folders)
