[project]
name = "parameter-golf"
version = "0.1.0"
description = "Parameter golf research experiments"
requires-python = ">=3.12,<3.13"
dependencies = [
    "skypilot-nightly[runpod]",
    "runpod>=1.6",
    "composer",
    "zstandard>=0.23",
]

# uv pip install torch==2.10.0+cu130 --index-url https://download.pytorch.org/whl/cu130

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pre-commit",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"scripts/gen_artifact_readme.py" = ["E501"]

[tool.uv.sources]
composer = { path = "../composer", editable = true }
